# eshop

./: .gitignore  README.md  eshop.db  pyproject.toml  run_tests.py  test_algorithms_simple.py  test_personalization.py  test_results.txt
.github/workflows/: remote.yaml
src/: app.py
src/eshop/: __init__.py  ab_testing.py  add_admin_column.py  add_category_id_column.py  add_more_discounts.py  admin_views.py  analytics.py  auth.py  cart.py  check_discount_distribution.py  checkout.py  config.py  create_admin_user.py  create_tables.py  diagnose_recommendations.py  forms.py  hybrid_recommender.py  init_analytics.py  migrate_categories.py  migrate_categories_force.py  migrate_db.py  ml_recommenders.py  models.py  offers.py  recommendation_cache.py  recommender.py  seed_interactions.py  seed_products.py  session_manager.py  shopping_cart_recommender.py  steps.txt  test_frontend.py  test_recommendations.py  views.py
src/eshop/static/: style.css
src/eshop/templates/: cart.html  categories.html  category.html  checkout.html  deals.html  index.html  login.html  order_confirmation.html  order_history.html  product.html  register.html
src/eshop/templates/admin/: base.html  categories.html  dashboard.html  orders.html  product_form.html  products.html  users.html
src/static/: style.css
src/templates/: index.html
tests/: README.md  conftest.py  mock_data_generator.py  test_ab_testing.py  test_advanced_neighbors_recommender.py  test_api_endpoints.py  test_category_hierarchy.py  test_edge_cases.py  test_linear_svm_recommender.py  test_metrics.py  test_performance_benchmarks.py  test_recommendation_cache.py  test_recommendation_integration.py  test_report_generator.py  test_shopping_cart_recommender.py
