[project]
name = "eshop"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Bill", email = "billxs@hotmail.com" }
]
dependencies = [
    "flask>=3.1.0",
    "python-dotenv>=1.1.0",
    "waitress>=3.0.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/eshop"]


[tool.rye.scripts]
devserver = "flask --app src/eshop run"
prod = "waitress-serve --port=8000 --threads=4 eshop:app"
hetz = "waitress-serve --port=8080 --threads=4 eshop:app"
hetz2 = "waitress-serve --port=8080 --threads=4 eshop:app"
